IBX-6262: Fixed misaligned "Use automatic translation" checkbox

--- a/src/bundle/Resources/public/scss/_add-translation.scss
+++ b/src/bundle/Resources/public/scss/_add-translation.scss
@@ -5,6 +5,7 @@
 
     .modal-body {
         display: flex;
+        flex-wrap: wrap;
         padding-bottom: calculateRem(140px);
 
         .ibexa-label {
